--- a/styles.css
+++ b/styles.css
@@ -166,22 +166,18 @@ footer {
     font-size: 56.25%;
   }
 
-  section {
-    scroll-margin-top: 46rem;
-  }
-
   #navbar {
     width: 100%;
-    max-height: 44rem;
+    max-height: 36rem;
     border: none;
     z-index: 1;
 
-    position: fixed;
+    position: absolute;
     top: 0;
   }
 
   #navbar ul {
-    height: 32rem;
+    height: 24rem;
   }
 
   .container {
